--- a/sourse/pug/blocks/sHit/_sHit.scss
+++ b/sourse/pug/blocks/sHit/_sHit.scss
@@ -17,7 +17,9 @@
 	}
 
 	.sliderAutoWidth {
-		height: 495px;
+		// height: 495px;
+		padding: 10px;
+		margin: -10px;
 		@include media-breakpoint-down(sm) {
 			overflow: visible;
 		}
