--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -33,14 +33,15 @@ mixin footer()
 						p СБ-ВС: с&nbsp;10:00 до&nbsp;18:00
 					p E-mail: 
 						a(href="mailto:info@tehnosadov.ru") info@tehnosadov.ru
-			+e.bottom.row
-				.col
-					+e.title Товары для дома и&nbsp;сада &laquo;Техносадов&raquo; <sup class="reg">&reg;</sup> 2018-2022
-					p Сайт носит информационный характер и&nbsp;не&nbsp;является публичной офертой, определяемой положениями ч.2&nbsp;ст.&nbsp;437&nbsp;ГК РФ. Внешний вид, цвет и&nbsp;характеристики товаров указаны ориентировочно, могут не&nbsp;совпадать с&nbsp;обновленными моделями&nbsp;&mdash; уточняйте информацию у&nbsp;менеджеров при заказе.
-				.col-12.col-lg-auto.d-flex.align-items-center.justify-content-center
-					+soc
-						+item-sos('vk','https://vk.com/tehnosadov')
-						+item-sos('youtube','https://youtube.com/channel/UC4Q_1trBaz7TReyeksjy7UA')
-						+item-sos('telegram','https://t.me/tehnosadov_bot')
-						+item-sos('whatsapp','https://api.whatsapp.com/message/BICUPZKPJ3TRH1')
-						+item-sos('ok','https://ok.ru/group/60953239879731')
+			+e.bottom
+				.row
+					.col
+						+e.title Товары для дома и&nbsp;сада &laquo;Техносадов&raquo; <sup class="reg">&reg;</sup> 2018-2022
+						p Сайт носит информационный характер и&nbsp;не&nbsp;является публичной офертой, определяемой положениями ч.2&nbsp;ст.&nbsp;437&nbsp;ГК РФ. Внешний вид, цвет и&nbsp;характеристики товаров указаны ориентировочно, могут не&nbsp;совпадать с&nbsp;обновленными моделями&nbsp;&mdash; уточняйте информацию у&nbsp;менеджеров при заказе.
+					.col-12.col-lg-auto.d-flex.align-items-center.justify-content-center
+						+soc
+							+item-sos('vk','https://vk.com/tehnosadov')
+							+item-sos('youtube','https://youtube.com/channel/UC4Q_1trBaz7TReyeksjy7UA')
+							+item-sos('telegram','https://t.me/tehnosadov_bot')
+							+item-sos('whatsapp','https://api.whatsapp.com/message/BICUPZKPJ3TRH1')
+							+item-sos('ok','https://ok.ru/group/60953239879731')
