--- a/sourse/pug/blocks/sHit/_sHit.pug
+++ b/sourse/pug/blocks/sHit/_sHit.pug
@@ -27,7 +27,7 @@ mixin buttonsNotAvailable()
 mixin ratingInfo()
 	+b.rating-info
 		+e.stars
-			+icon('star')
+			+icon('star') (class "icon--filled")
 			+icon('star')
 			+icon('star')
 			+icon('star')
