--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -23,15 +23,9 @@ mixin top-nav()
 	+b.top-nav.block-with-lazy
 		.container
 			.row
-				+e.col-catalog.col
+				+e.col-catalog.col-lg
 					button.catalog-btn.catalog-btn--js <span></span>Каталог товаров
-				.col.order-lg-0.order-last
-					.menu-mobile.menu-mobile--js
-						.menu-mobile__inner
-							+menu-toggle()
-							+mnu()
-					
-				.col-auto.d-lg-none
-					+menu-toggle()
+				.col-lg
+					+mnu()
 			+sCatalogNav()
 	// end top-nav
