--- a/sourse/pug/blocks/sHit/_sHit.scss
+++ b/sourse/pug/blocks/sHit/_sHit.scss
@@ -21,6 +21,9 @@
 		padding: 10px;
 		margin: -10px;
 		@include media-breakpoint-down(xxl) {
+			overflow: visible;
+		}
+		@include media-breakpoint-down(xxl) {
 			margin: -10px 0 -10px -10px;
 		}
 		@include media-breakpoint-down(sm) {
@@ -59,11 +62,7 @@
 		fill: transparent;
 		color: #A8C828;
 		stroke: currentColor;
-<<<<<<< HEAD
-		&--filled {
-=======
 		&.active {
->>>>>>> d05cf649176de7edcc3f34e94dc5e7032ef46f40
 			fill: currentColor;
 		}
 	}
