--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -3,12 +3,27 @@
 	// 
 	background-color: $body-color;
 	color: $white;
-	z-index: 301;
+ 
+	z-index: 1200;
+	@include media-breakpoint-down(lg) {
+		.container{
+			max-width: 100%;
+			padding: 0;
+		}
+		// display: none;
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		@include mt;
+		&:not(.active) {
+			opacity: 0;
+			transform: translateY(100%);
+		}
+	}
 	.container{
 		position: relative;
-		@include media-breakpoint-down(lg) {
-			display: none;
-		}
 
 	}
 
@@ -20,12 +35,14 @@
 	&__col-catalog {
 		// display: flex;
 		// align-items: center;
+		@include media-breakpoint-up(xl) {
 		max-width:rem(312);
-		@include media-breakpoint-down(xl) {
-			max-width:rem(200);
 		}
-		@include media-breakpoint-down(lg) {
-			display: none;
+		@include media-breakpoint-down(xl) {
+		}
+		@include media-breakpoint-up(lg) {
+			max-width:rem(200);
+			// display: none;
 		}
 	}
 	@include media-breakpoint-up(xl) {
@@ -73,7 +90,11 @@
 .catalog-btn {
 	display: flex;
 	align-items: center;	
-	padding: $grid-gutter-width;
+	@include media-breakpoint-up(lg) {
+
+		padding: $grid-gutter-width;
+	}
+	padding: rem(20);
 	color: $white;
 	background-color: #5e5e5e;
 	transition: background-color .3s ease-in-out;
@@ -93,7 +114,7 @@
     border-radius: 1px;
     margin-right: $grid-gutter-width;
     background: $white;;
-    transition: .3s;
+    @include mt; 
 		&::before {
 			content: '';
 			width: 20px;
@@ -102,8 +123,9 @@
 			position: absolute;
 			background: $white;
 			top: 7px;
-			left: 0;
-			transition: .3s;
+			left: 0; 
+			@include mt; 
+			transform-origin: 50% 50%;
 		}
 		&::after {
 			content: '';
@@ -114,24 +136,28 @@
 			background: $white;
 			bottom: 7px;
 			left: 0;
-			transition: .3s;
+			transform-origin: 50% 50%;
+			
 		}
+		@include mt;
 	}
 	&--active {
 		background-color:$red;
-		transition: .3s;
+		// transition: .3s;
 		span {
 			background-color: transparent;
-			@include mt;
 			&::before {
-				transform: rotate(45deg);
-				transform-origin: right;
-				transition: .3s;
+				// transform-origin: right bottom;
+				
+				transform: rotate(45deg); 
+				top: 0;
+				// transition: .3s;
 			}
 			&::after {
 				transform: rotate(-45deg);
-				transform-origin: right;
-				transition: .3s;
+				top: 0;
+				// transform-origin: left top;
+				// transition: .3s;
 			}
 		}
 	}
