--- a/sourse/pug/layout/js-css.pug
+++ b/sourse/pug/layout/js-css.pug
@@ -3,11 +3,12 @@ mixin allcss()
 	link(href="libs/swiper/swiper.min.css", rel="stylesheet")
 	link(href="libs/@fancyapps/ui/fancybox.css", rel="stylesheet")
 	link(href="libs/ion-rangeslider/css/ion.rangeSlider.min.css", rel="stylesheet")
-	link(href=`css/main.min.css?v=${version}`, rel="stylesheet")
-
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+	link(href=`css/main.min.css`, rel="stylesheet")
+
+
 
 mixin allcjs() 
 	script(src="libs/jquery/jquery.min.js")
@@ -16,4 +17,4 @@ mixin allcjs()
 	script(src="libs/hc-sticky/hc-sticky.js")
 	script(src="libs/ion-rangeslider/js/ion.rangeSlider.min.js") 
 	script(src="libs/inputmask/inputmask.min.js") 
-	script(src=`js/common.js?v=${version}`)
+	script(src=`js/common.js`)
