--- a/sourse/pug/blocks/sBlogSlider/_sBlogSlider.scss
+++ b/sourse/pug/blocks/sBlogSlider/_sBlogSlider.scss
@@ -12,6 +12,9 @@
 	.swiper {
 		margin: 0 -10px;
 		padding: 0 10px;
+		@include media-breakpoint-down(xxl) {
+			overflow: visible;
+		}
 	}
 	.swiper-wrapper {
 		padding: 10px;
