--- a/sourse/pug/pages/02-catalog-item.pug
+++ b/sourse/pug/pages/02-catalog-item.pug
@@ -33,7 +33,7 @@ block pagecontent
 	+page-head(title, 'Главная', 'Садовая техника', 'Расходные материалы к садовой технике', 'Триммерный корд Husqvarna Opti Round 1%2C5 мм/15 м в блистере 5976688-01')
 	+sProductItem
 	+sProductDesc2
-	+sBlogSlider('Ранее просмотренные товары')
+	+sHit('Ранее просмотренные товары')
 	+footer()
       
 
