--- a/sourse/pug/pages/08-account-reg.pug
+++ b/sourse/pug/pages/08-account-reg.pug
@@ -34,9 +34,9 @@ block pagecontent
 	+page-head(title, 'Главная', 'Регистрация')
 	.container.page-container
 		.row
-			.col-xl-2.col-lg-3
+			.col-xxl-2.col-lg-3
 				+sidebar(`1`,`Личные данные`,`Мои заказы`,`Выйти`)
-			.col-xl-10.col-lg-9
+			.col-xxl-10.col-lg-9
 				.mainside
 					+sAccountReg
 	+footer
