--- a/sourse/pug/blocks/sBlogNav/_sBlogNav.scss
+++ b/sourse/pug/blocks/sBlogNav/_sBlogNav.scss
@@ -1,16 +1,5 @@
 // start .sBlogNav
-.sBlogNav {
-	// --sPT: ;
-	// --sPB: ;
-	// --sTPB: ;
-	height: 100%;
-	padding: $grid-gutter-width;
-	background: #fff;
-	border: 1px solid #ddd;
-	// overflow-y: scroll;
-	@include media-breakpoint-up(lg) {
-		max-width: 330px;
-	}
+.sticky-wrap {  
 	&__title {
 		position: relative;
 		font-weight: bold;
@@ -40,10 +29,8 @@
 		overflow-y: auto;
 		max-height: 100vh;
 	}
-	ul {
-		display: block;
-		@include media-breakpoint-down(lg) {
-			display: none;
+	ul { 
+		@include media-breakpoint-down(lg) { 
 			margin-top: 20px;
 		}
 		padding: 0;
@@ -54,6 +41,8 @@
 		a {
 			color: $blue;
 			font-weight: 700;
+			padding-top: 0;
+			padding-bottom: 0;
 		}
 		ul {
 			a {
