--- a/sourse/pug/blocks/sHit/_sHit.scss
+++ b/sourse/pug/blocks/sHit/_sHit.scss
@@ -1,7 +1,7 @@
 // start .sHit
 .sHit {
 		--sPT: calc(#{$grid-gutter-width} * 2);
-		--sPB: 0;
+		--sPB: 40px;
 		--sTPB: calc(#{$grid-gutter-width} * 2);
 	.hit-slider-button-prev {
 		margin-right: $grid-gutter-width;
